--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ quarkus:
     always-include: true
   datasource:
     db-kind: h2
+    jdbc:
+      max-size: 100
 
 ## Dev
 "%dev":
@@ -34,6 +36,8 @@ quarkus:
       env:
         vars:
           quarkus-launch-devmode: true
+  employee:
+    name: Tristan Mahinay
 
 ## Remote Development
 #"%dev":
